fix phone number text-decoration on iphone

--- a/styles.scss
+++ b/styles.scss
@@ -56,9 +56,13 @@ header {
   }
   }
 }
-a[x-apple-data-detectors].digits {
-  color: lightgrey!important;
+a[x-apple-data-detectors] {
+  color: inherit !important;
   text-decoration: none !important;
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
 }
 
 #portrait {
